--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Mathias Hedberg <mathias@hedberg.io>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 asyncio-mqtt = "^0.12.1"
+aioserial = "^1.3.0"
+vedirect = {git = "https://github.com/karioja/vedirect.git"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
