--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,20 @@
 [tool.poetry]
 name = "asyncio-vedirect-mqtt"
-version = "0.1.0"
-description = ""
+version = "1.0.0"
+description = "Publish serial data from to an MQTT broker"
 authors = ["Mathias Hedberg <mathias@hedberg.io>"]
+license = "GPL-2.0-only"
+readme = "README.md"
+repository = "https://github.com/metrafonic/asyncio-vedirect-mqtt"
 
 [tool.poetry.dependencies]
 python = "^3.8"
 asyncio-mqtt = "^0.12.1"
 aioserial = "^1.3.0"
-vedirect = {git = "https://github.com/karioja/vedirect.git"}
+vedirect = {git = "https://github.com/karioja/vedirect.git", rev = "a576848"}
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^7.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
