--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "asyncio-vedirect-mqtt"
 version = "1.0.0"
-description = "Publish serial data from to an MQTT broker"
+description = "Publish serial data from ve.direct to an MQTT broker"
 authors = ["Mathias Hedberg <mathias@hedberg.io>"]
 license = "GPL-2.0-only"
 readme = "README.md"
