--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ asyncio-mqtt = "^0.12.1"
 aioserial = "^1.3.0"
 vedirect = {git = "https://github.com/karioja/vedirect.git", rev = "a576848"}
 coverage = "^6.4.1"
+paho-mqtt = "^1.6.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
